SDGF-209: Running tests under JDK21